Overflow x fix

--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ a:hover{
 @media (max-width: 1200px) { 
 	.shadow-title, .shadow-title-right {
 		position: absolute;
-		overflow: hidden !important;
+		overflow-x: hidden !important;
 	}
 	.section-parallax {
 		position: absolute;
